# betterstatcord.py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: flake8.yml
examples/: example_basic.py  example_clustered.py  example_cog.py  example_custom_graphs.py
statcord/: __init__.py  client.py  cluster_client.py
