[tool.poetry]
name = "better-statcord.py"
version = "1.0.0"
description = "A better statcord api library for Python + Discord.py"
authors = ["Milo Weinberg <iapetus011@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.7.4"
discord = "^1.0.1"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
black = "^21.4b0"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
